5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4081/executions/1602_1016.log
== TEST (2019-03-24 17:51:03) 
-- CODE:
a=float(input("3,0"))
b=float(input("8,0"))
c=float(input("6,0"))
S=(a+b+c)/2
A=match.sqrt(s*(s-a)*(s-b)*s-c))
print(round(A, S))

-- ERROR:
File "XXXX", line 5
    A=match.sqrt(s*(s-a)*(s-b)*s-c))
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:51:26) 
-- CODE:
a=float(input("3,0"))
b=float(input("8,0"))
c=float(input("6,0"))
S=(a+b+c)/2
A=match.sqrt(s*(s-a)*(s-b)*s-c)
print(round(A, S))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    A=match.sqrt(s*(s-a)*(s-b)*s-c)
NameError: name 'match' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:51:45) 
-- CODE:
a=float(input("3,0"))
b=float(input("8,0"))
c=float(input("6,0"))
S=(a+b+c)/2
A=match.sqrt(s*(s-a)*(s-b)*(s-c)
print(round(A, S))

-- ERROR:
File "XXXX", line 6
    print(round(A, S))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:52:01) 
-- CODE:
a=float(input("3,0"))
b=float(input("8,0"))
c=float(input("6,0"))
S=(a+b+c)/2
A=match.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A, S))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    A=match.sqrt(s*(s-a)*(s-b)*(s-c))
NameError: name 'match' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:52:08) 
-- CODE:
a=float(input("3,0"))
b=float(input("8,0"))
c=float(input("6,0"))
S=(a+b+c)/2
A=match.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A, 5))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    A=match.sqrt(s*(s-a)*(s-b)*(s-c))
NameError: name 'match' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 17:52:15) 
-- CODE:
a=float(input("3,0"))
b=float(input("8,0"))
c=float(input("6,0"))
S=(a+b+c)/2
A=match.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A, 5))

-- EXECUTION TIME:
0.15227
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1016/main.py", line 5, in <module>
    A=match.sqrt(s*(s-a)*(s-b)*(s-c))
NameError: name 'match' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:53:04) 
-- CODE:
a=float(input("3,0"))
b=float(input("8,0"))
c=float(input("6,0"))
S=(a+b+c)/2
A=match.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A, 5))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    A=match.sqrt(s*(s-a)*(s-b)*(s-c))
NameError: name 'match' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:54:05) 
-- CODE:
a=float(input("3,0"))
b=float(input("8,0"))
c=float(input("6,0"))
S=(a+b+c)/2
A=match.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A, 5))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    A=match.sqrt(s*(s-a)*(s-b)*(s-c))
NameError: name 'match' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:55:40) 
-- CODE:
a=float(int("3,0"))
b=float(int("8,0"))
c=float(int("6,0"))
S=(a+b+c)/2
A=match.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A, 5))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a=float(int("3,0"))
ValueError: invalid literal for int() with base 10: '3,0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:55:51) 
-- CODE:
a=float(input("3,0"))
b=float(input("8,0"))
c=float(input("6,0"))
S=(a+b+c)/2
A=match.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A, 5))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    A=match.sqrt(s*(s-a)*(s-b)*(s-c))
NameError: name 'match' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:56:43) 
-- CODE:
a=float(input("3,0"))
b=float(input("8,0"))
c=float(input("6,0"))
s=(a+b+c)/2
A=match.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A, 5))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    A=match.sqrt(s*(s-a)*(s-b)*(s-c))
NameError: name 'match' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:57:03) 
-- CODE:
a= float(input("3,0"))
b= float(input("8,0"))
c= float(input("6,0"))
s= (a+b+c)/2
A= match.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A, 5))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    A= match.sqrt(s*(s-a)*(s-b)*(s-c))
NameError: name 'match' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:57:30) 
-- CODE:
import match
a= float(input("3,0"))
b= float(input("8,0"))
c= float(input("6,0"))
s= (a+b+c)/2
A= match.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A, 5))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import match
ModuleNotFoundError: No module named 'match'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:58:46) 
-- CODE:

a= float(input("3,0"))
b= float(input("8,0"))
c= float(input("6,0"))
s= (a+b+c)/2
A= match.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A, 5))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    A= match.sqrt(s*(s-a)*(s-b)*(s-c))
NameError: name 'match' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 17:58:49) 
-- CODE:

a= float(input("3,0"))
b= float(input("8,0"))
c= float(input("6,0"))
s= (a+b+c)/2
A= match.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A, 5))

-- EXECUTION TIME:
0.13582
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1016/main.py", line 6, in <module>
    A= match.sqrt(s*(s-a)*(s-b)*(s-c))
NameError: name 'match' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:59:43) 
-- CODE:

a= float(input("3,0"))
b= float(input("8,0"))
c= float(input("6,0"))
s= (a+b+c)/2
A= math.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A, 5))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    A= math.sqrt(s*(s-a)*(s-b)*(s-c))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 18:00:01) 
-- CODE:

a= float(input("3,0"))
b= float(input("8,0"))
c= float(input("6,0"))
s= (a+b+c)/2
A= math.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A, 5))

-- EXECUTION TIME:
0.200116
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1016/main.py", line 6, in <module>
    A= math.sqrt(s*(s-a)*(s-b)*(s-c))
NameError: name 'math' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 18:02:06) 
-- CODE:

a= float(input("3.0"))
b= float(input("8.0"))
c= float(input("6.0"))
s= (a+b+c)/2
A= math.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A, 5))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    A= math.sqrt(s*(s-a)*(s-b)*(s-c))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 18:02:57) 
-- CODE:

a= float(input("3,0"))
b= float(input("8,0"))
c= float(input("6,0"))
s= (a+b+c)/2
A= math.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A, 5))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    A= math.sqrt(s*(s-a)*(s-b)*(s-c))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 18:05:48) 
-- CODE:

a= float(input("3,0"))
b= float(input("8,0"))
c= float(input("6,0"))
s= (a+b+c)/2
A= math.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A, 5))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    A= math.sqrt(s*(s-a)*(s-b)*(s-c))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 18:12:46) 
-- CODE:

a= float(input("3,0"))
b= float(input("8,0"))
c= float(input("6,0"))
s= (a+b+c)/2
A= math.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A, 5))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    A= math.sqrt(s*(s-a)*(s-b)*(s-c))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 18:38:55) 
-- CODE:
a= float(input("3,0"))
b= float(input("8,0"))
c= float(input("6,0"))
s= (a+b+c)/2
A= math.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A, 5))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    A= math.sqrt(s*(s-a)*(s-b)*(s-c))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 18:45:45) 
-- CODE:
a= float(input("3.0"))
b= float(input("8.0"))
c= float(input("6.0"))
s= (a+b+c)/2
A= math.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A, 5))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    A= math.sqrt(s*(s-a)*(s-b)*(s-c))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 18:46:33) 
-- CODE:
a= float(input("3,0"))
b= float(input("8,0"))
c= float(input("6,0"))
s= (a+b+c)/2
A= math.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A, 5))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    A= math.sqrt(s*(s-a)*(s-b)*(s-c))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 19:00:09) 
-- CODE:
a= float(input("3,0"))
b= float(input("8,0"))
c= float(input("6,0"))
s= (a+b+c)/2
A= math.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A, 5))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    A= math.sqrt(s*(s-a)*(s-b)*(s-c))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 19:00:31) 
-- CODE:
a= float(input("3,0"))
b= float(input("8,0"))
c= float(input("6,0"))
s= a+b+c/2
A= math.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A, 5))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    A= math.sqrt(s*(s-a)*(s-b)*(s-c))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 19:12:21) 
-- CODE:
a= float(input("3,0"))
b= float(input("8,0"))
c= float(input("6,0"))
s= (a+b+c)/2
A= math.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A, S))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    A= math.sqrt(s*(s-a)*(s-b)*(s-c))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 19:12:44) 
-- CODE:
a= float(input("3,0"))
b= float(input("8,0"))
c= float(input("6,0"))
s= (a+b+c)/2
Z= math.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(Z, 5))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Z= math.sqrt(s*(s-a)*(s-b)*(s-c))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 19:12:58) 
-- CODE:
a= float(input("3,0")
b= float(input("8,0")
c= float(input("6,0")
s= (a+b+c)/2
Z= math.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(Z, 5))

-- ERROR:
File "XXXX", line 2
    b= float(input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 19:13:10) 
-- CODE:
a= float(input("3,0")
b= float(input("8,0"))
c= float(input("6,0")
s= (a+b+c)/2
Z= math.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(Z, 5))

-- ERROR:
File "XXXX", line 2
    b= float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 19:13:17) 
-- CODE:
a= float(input("3,0")
b= float(input("8,0"))
c= float(input("6,0"))
s= (a+b+c)/2
Z= math.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(Z, 5))

-- ERROR:
File "XXXX", line 2
    b= float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 19:14:52) 
-- CODE:
import 
a= float(input("3,0")
b= float(input("8,0"))
c= float(input("6,0"))
s= (a+b+c)/2
Z= math.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(Z, 5))

-- ERROR:
File "XXXX", line 1
    import 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 19:15:15) 
-- CODE:
import math
a= float(input("3,0")
b= float(input("8,0"))
c= float(input("6,0"))
s= (a+b+c)/2
Z= math.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(Z, 5))

-- ERROR:
File "XXXX", line 3
    b= float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 19:15:28) 
-- CODE:
import math
a= float(input("3,0"))
b= float(input("8,0"))
c= float(input("6,0"))
s= (a+b+c)/2
Z= math.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(Z, 5))

-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 19:19:41) 
-- CODE:
import math
a= float(input("3,0"))
b= float(input("8,0"))
c= float(input("6,0"))
S= (a+b+c)/2
Z= math.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(Z, S))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Z= math.sqrt(s*(s-a)*(s-b)*(s-c))
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 19:20:12) 
-- CODE:
import math
a= float(input("3,0"))
b= float(input("8,0"))
c= float(input("6,0"))
S= (a+b+c)/2
Z= math.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(Z, 5))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Z= math.sqrt(s*(s-a)*(s-b)*(s-c))
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 19:21:23) 
-- CODE:
import math
a= float(input("quanto vale a: "))
b= float(input("quanto vale b: "))
c= float(input("quanto vale c: "))
S= (a+b+c)/2
Z= math.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(Z, 5))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Z= math.sqrt(s*(s-a)*(s-b)*(s-c))
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 19:22:01) 
-- CODE:
import math
a= float(input("quanto vale a: "))
b= float(input("quanto vale b: "))
c= float(input("quanto vale c: "))
s= (a+b+c)/2
Z= math.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(Z, 5))

-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 19:22:17) 
-- CODE:
import math
a= float(input("quanto vale a: "))
b= float(input("quanto vale b: "))
c= float(input("quanto vale c: "))
s= (a+b+c)/2
Z= math.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(Z, 5))

-- EXECUTION TIME:
0.207503
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:21:33) 
-- CODE:
import math
a= float(input("quanto vale a: "))
b= float(input("quanto vale b: "))
c= float(input("quanto vale c: "))
s= (a+b+c)/2
Z= math.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(Z, 5))

-- EXECUTION TIME:
0.142315
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:47:10) 
-- CODE:
import math
a= float(input("quanto vale a: "))
b= float(input("quanto vale b: "))
c= float(input("quanto vale c: "))
s= (a+b+c)/2
Z= math.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(Z, 5))

-- EXECUTION TIME:
0.158827
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:47:48) 
-- CODE:
import math
a= float(input("quanto vale a: "))
b= float(input("quanto vale b: "))
c= float(input("quanto vale c: "))
s= (a+b+c)/2
Z= math.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(Z, 5))

-- EXECUTION TIME:
0.142126
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:47:52) 
-- CODE:
import math
a= float(input("quanto vale a: "))
b= float(input("quanto vale b: "))
c= float(input("quanto vale c: "))
s= (a+b+c)/2
Z= math.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(Z, 5))

-- EXECUTION TIME:
0.165362
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:47:57) 
-- CODE:
import math
a= float(input("quanto vale a: "))
b= float(input("quanto vale b: "))
c= float(input("quanto vale c: "))
s= (a+b+c)/2
Z= math.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(Z, 5))

-- EXECUTION TIME:
0.165722
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:01:42) 
-- CODE:
import math
a= float(input("quanto vale a: "))
b= float(input("quanto vale b: "))
c= float(input("quanto vale c: "))
s= (a+b+c)/2
Z= math.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(Z, 5))

-- EXECUTION TIME:
0.156718
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:04:08) 
-- CODE:
import math
a= float(input("quanto vale a: "))
b= float(input("quanto vale b: "))
c= float(input("quanto vale c: "))
s= (a+b+c)/2
Z= math.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(Z, 5))

-- EXECUTION TIME:
0.200465
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 12:56:48) 
-- CODE:
import math
a= float(input("quanto vale a: "))
b= float(input("quanto vale b: "))
c= float(input("quanto vale c: "))
s= (a+b+c)/2
Z= math.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(Z, 5))

-- EXECUTION TIME:
0.146583
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:02:04) 
-- CODE:
import math
a= float(input("quanto vale a: "))
b= float(input("quanto vale b: "))
c= float(input("quanto vale c: "))
s= (a+b+c)/2
Z= math.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(Z, 5))

-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
